<resources>
    <string name="app_name">(3)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag1_text">frag1_text</string>
    <string name="frag2_text">frag2_text</string>
    <string name="add">Add</string>
    <string name="replace_with_fragment_2">Replace (with fragment 2)</string>
    <string name="remove_fragment_1">Remove (fragment 1)</string>
    <string name="add_to_back_stack">add to Back Stack</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
</resources>

