<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <RadioButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:onClick="onClick"/>
            <RadioButton
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_fragment_1"
                android:onClick="onClick"/>
            <RadioButton
                android:id="@+id/replace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replace_with_fragment_2"
                android:onClick="onClick"/>
        </RadioGroup>
        
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swStack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:text="@string/add_to_back_stack"
            android:textOff="@string/off"
            android:textOn="@string/on"
            app:showText="true" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>